<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros1_message_mirror</name>
  <version>0.4.0</version>
  <description>Common tools for working with ROS1 components.</description>

  <maintainer email="pbovbel@locusrobotics.com">Paul Bovbel</maintainer>
  <license>Apache License 2.0</license>
  <author email="pbovbel@locusrobotics.com">Paul Bovbel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <!-- catkin dependencies -->
  <!-- <build_export_depend>rosmsg</build_export_depend> -->

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
